--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emberling-artwork",
+  "name": "flamelings-artwork",
   "version": "1.0.0",
   "description": "Artwork for Emberling Collection",
   "main": "index.js",
